--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@types/lodash": "4.14.85",
+    "bcrypt": "1.0.3",
     "bip39": "^2.4.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
