--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "dependencies": {
     "@types/lodash": "4.14.85",
+    "@types/ws": "3.2.0",
     "bcrypt": "1.0.3",
+    "bcrypt-nodejs": "0.0.3",
     "bip39": "^2.4.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
@@ -58,6 +60,7 @@
     "rolling-rate-limiter": "^0.1.10",
     "web-request": "^1.0.7",
     "web3": "^1.0.0-beta.26",
-    "winston": "^2.4.0"
+    "winston": "^2.4.0",
+    "ws": "3.3.2"
   }
 }
