Add ability to send test tokens/coins.

--- a/.env.template
+++ b/.env.template
@@ -16,6 +16,8 @@ AUTH_ACCESS_JWT=
 
 VERIFY_BASE_URL=http://verify:3000
 
+REDIS_URL=redis://redis:6379
+
 COMPANIES_BASE_URL=http://companies/api/v1
 
 CONTRACTS_WS_URL=ws://contracts
